[package]
name = "quick-mathml"
version = "0.1.0"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.22.0", features = ["serialize"] }
serde = {version = "1.0.126", features = [ "derive" ] }

[lib]
name = "quick_mathml"
path = "src/lib.rs"

[[bin]]
name = "quick_mathml"
path = "src/bin.rs"
