[package]
name = "mathml-macros"
version = "0.1.1-alpha.1"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"
description = "Macros for the MathML parser."
homepage = "https://github.com/ballaneypranav/mathml-rs"
repository = "https://github.com/ballaneypranav/mathml-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.73", features = ["extra-traits", "full" ]}
proc-macro2 = "1.0.27"

[lib]
proc-macro = true
