[package]
name = "mathml-rs"
version = "0.1.1-alpha.2"
authors = ["Pranav Ballaney <ballaneypranav@gmail.com>"]
edition = "2018"
description = "MathML parser written in Rust."
homepage = "https://github.com/ballaneypranav/mathml-rs"
repository = "https://github.com/ballaneypranav/mathml-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
mathml-macros = { path = "../mathml-macros" , version = "^0.1.1-alpha.1"}
approx = "0.5.0"
